tests/errors/syn_if8.java
public class syn_if8 {
public static void main(String[] args){
if ( true || false ) 
}
}
}